--- a/src/main/webapp/views/pRechercheVue.html
+++ b/src/main/webapp/views/pRechercheVue.html
@@ -1,6 +1,9 @@
-Rechercher : <input type="number" placeholder="ID" ng-model="id" >
+<h2>Formulaire d'ajout d'un Propri&eacutetaire</h2>
+<br/>
+ID : <input type="number" placeholder="identifiant" ng-model="id" >
+<br/>
 <input type="button" value="Rechercher" ng-click="rechercher()" >
-
+<br/>
 <div ng-show="indice">
 <h1>Informations du Propri&eacutetaire</h1>
 
@@ -8,7 +11,6 @@ Rechercher : <input type="number" placeholder="ID" ng-model="id" >
 	<tr>
 		<th>Nom</th>
 		<th>Email</th>
-		<th>N° de rue</th>
 		<th>Rue</th>
 		<th>Code Postal</th>
 		<th>Ville</th>
@@ -19,8 +21,7 @@ Rechercher : <input type="number" placeholder="ID" ng-model="id" >
 	<tr>
 		<td>{{proprio.nom}}</td>
 		<td>{{proprio.mail}}</td>
-		<td>{{proprio.adresse.numRue}}</td>
-		<td>{{proprio.adresse.rue}}</td>
+		<td>{{proprio.adresse.numRue}}, {{proprio.adresse.rue}}</td>
 		<td>{{proprio.adresse.cp}}</td> 
 		<td>{{proprio.adresse.localite}}</td>
 		<td>{{proprio.adresse.pays}}</td>
