--- a/src/main/webapp/views/responsable/rListeVue.html
+++ b/src/main/webapp/views/responsable/rListeVue.html
@@ -9,7 +9,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr ng-repeat="e in liste">
+    <tr ng-repeat="r in liste">
       <td>{{r.nom}}</td>
       <td>{{r.telPerso}}</td>
       <td>{{r.mail}}</td>
