thibault : derniere page pour agence

--- a/src/main/webapp/views/agence/aAjoutVue.html
+++ b/src/main/webapp/views/agence/aAjoutVue.html
@@ -1,8 +1,8 @@
-<h2>Formulaire d'ajout d'un Propri&eacutetaire</h2>
+<h2>Formulaire d'ajout d'une agence</h2>
 <br/>
 Nom <input type="text" placeholder="nom" ng-model="agence.nom">
 <br/>
-Num&eacutero de rue <input type="number" placeholder="Numéro" ng-model="agence.adresse.numRue">
+Num&eacutero de rue <input type="number" placeholder="Numero" ng-model="agence.adresse.numRue">
 <br/>
 Rue <input type="text" placeholder="rue" ng-model="agence.adresse.rue">
 <br/>
