--- a/src/main/webapp/views/agence/aModifVue.html
+++ b/src/main/webapp/views/agence/aModifVue.html
@@ -1,18 +1,18 @@
-<h2>Formulaire d'ajout d'une agence</h2>
+<h2>Formulaire de modification d'une agence</h2>
 <br/>
-Id <input type="text" placeholder="id" ng-model="agence.id">
+Id <input type="text" placeholder="id" ng-model="aModif.id">
 <br/>
-Nom <input type="text" placeholder="nom" ng-model="agence.nom">
+Nom <input type="text" placeholder="nom" ng-model="aModif.nom">
 <br/>
-Num&eacutero de rue <input type="number" placeholder="Numéro" ng-model="agence.adresse.numRue">
+Num&eacutero de rue <input type="number" placeholder="Numero" ng-model="aModif.adresse.numRue">
 <br/>
-Rue <input type="text" placeholder="rue" ng-model="agence.adresse.rue">
+Rue <input type="text" placeholder="rue" ng-model="aModif.adresse.rue">
 <br/>
-Code Postal <input type="text" placeholder="code postal" ng-model="agence.adresse.cp">
+Code Postal <input type="text" placeholder="code postal" ng-model="aModif.adresse.cp">
 <br/>
-Ville <input type="text" placeholder="ville" ng-model="agence.adresse.localite">
+Ville <input type="text" placeholder="ville" ng-model="aModif.adresse.localite">
 <br/>
-Pays <input type="text" placeholder="pays" ng-model="agence.adresse.pays">
+Pays <input type="text" placeholder="pays" ng-model="aModif.adresse.pays">
 <br/>
 <input type="button" value="Modifier" ng-click="modif()" >
 <br/>
