--- a/src/main/webapp/views/proprietaire/pRechercheVue.html
+++ b/src/main/webapp/views/proprietaire/pRechercheVue.html
@@ -1,4 +1,4 @@
-<h2>Formulaire d'ajout d'un Propri&eacutetaire</h2>
+<h2>Formulaire de recherche d'un Propri&eacutetaire</h2>
 <br/>
 ID : <input type="number" placeholder="identifiant" ng-model="id" >
 <br/>
