--- a/src/main/webapp/views/bl/bLSupprVue.html
+++ b/src/main/webapp/views/bl/bLSupprVue.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
-<body>
-
-</body>
-</html>
+<h2>Formulaire de suppression d'un Bien immobilier en location</h2>
+<br/>
+ID <input type="number" placeholder="ID" ng-model="id">
+<br/>
+<input type="button" value="Supprimer" ng-click="supprimer()" >
+<br/>
+<h3>{{msg}}</h3>
