--- a/src/main/webapp/views/visite/vModifVue.html
+++ b/src/main/webapp/views/visite/vModifVue.html
@@ -2,11 +2,6 @@
 <br />
 ID <input type="number" placeholder="ID" ng-model="vForm.id">
 <br/>
-<div class="input-group date">
-    <input type="text" class="form-control" value="2018-09-12">
-    <div class="input-group-addon">
-        <span class="glyphicon glyphicon-th"></span>
-    </div>
-</div>
+Date <input type="date" placeholder="Date" ng-model="vForm.dateHeure">
 <br/>
 <h3>{{msg}}</h3>
