--- a/src/main/webapp/views/contrat/coSupprVue.html
+++ b/src/main/webapp/views/contrat/coSupprVue.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
-<body>
-
-</body>
-</html>
+<h2 style="color : aquamarine; text-align: center">Formulaire de modification de contrat</h2>
+<br/>
+<label>Numero du contrat</label>
+<input type="text" placeholder="Numero" ng-model="id">
+<br/>
+<input type="button" value="Ajouter" ng-click="suppr(id)">
+<h3>{{msg}}</h3>
