--- a/src/main/webapp/views/bl/bLAjoutVue.html
+++ b/src/main/webapp/views/bl/bLAjoutVue.html
@@ -2,6 +2,7 @@
 <br/>
 Type de Bien
 <select class="form-control" ng-model="blForm.typeBien">
+  <option value="">choisissez un type de bien</option>
   <option value="maison">Maison</option>
   <option value="appartement">Appartement</option>
   <option value="studio">Studio</option>
