--- a/src/main/webapp/views/contrat/coRechercheVue.html
+++ b/src/main/webapp/views/contrat/coRechercheVue.html
@@ -1,10 +1,19 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
-<body>
-
-</body>
-</html>
+<h2 style="color : aquamarine; text-align: center">Formulaire de modification de contrat</h2>
+<br/>
+<label>Numero du contrat</label>
+<input type="text" placeholder="Numero" ng-model="id">
+<br/>
+<input type="button" value="Ajouter" ng-click="rech(id)">
+<h3>{{msg}}</h3>
+<table class="table table-striped">
+	<tr>
+		<th>Type</th>
+		<th>Date d'acquisition</th>
+		<th>Liens</th>
+	</tr>
+	<tr>
+		<td>{{coOut.type}}</td>
+		<td>{{coOut.dateAcquisition}}</td>
+		<td><a ng-click="delLink(co.id)">Supprimer</a> | <a ng-click="updLink(co)">Modifier</a></td>
+	</tr>
+</table>
