--- a/src/main/webapp/views/pc/cSListePCVue.html
+++ b/src/main/webapp/views/pc/cSListePCVue.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
-<body>
-
-</body>
-</html>
+<h1>Rechercher un bien par type</h1>
+<table class="table table-striped">
+	<tr>
+		<th>Type de Bien</th>	
+	</tr>
+	<tr ng-repeat="c in liste">
+		<td>{{c.typeBien}}</td>		
+	</tr>
+</table>
