valentin commit vue des client cote client

--- a/src/main/webapp/views/pc/bVListePCVue.html
+++ b/src/main/webapp/views/pc/bVListePCVue.html
@@ -23,11 +23,8 @@
 		<td>{{b.dateSoumission | date: "dd/MM/yyyy"}}</td>
 		<td>{{b.dateDisposition | date: "dd/MM/yyyy"}}</td>
 		<td><img ng-src="data:image/JPEG;base64,{{b.listeImage}}" style="max-height:50px;max-width:50px"></td>
-		<td>{{b.caution}}</td>
-		<td>{{b.loyer}}</td>
-		<td>{{b.charges}}</td>
-		<td>{{b.typeBail}}</td>
-		<td>{{b.garniture}}</td>
+		<td>{{b.prix}}</td>
+		<td>{{b.etat}}</td>		
 		<td>{{b.adresse.numRue}}, {{p.adresse.rue}}</td>
 		<td>{{b.adresse.cp}}</td> 
 		<td>{{b.adresse.localite}}</td>
