--- a/src/main/webapp/views/pc/vListePCVue.html
+++ b/src/main/webapp/views/pc/vListePCVue.html
@@ -1,16 +1,14 @@
-<h2>Schedular App</h2>
+<h2>Calendrier des visites</h2>
 <!--  HTML -->
-<div ng-app="myApp" ng-controller="myNgController">
     <div class="row">
         <div class="col-md-8">
             <div id="calendar" ui-calendar="uiConfig.calendar" ng-model="eventSources" calendar="myCalendar"></div>
         </div>
         <div class="col-md-4">
             <div ng-show="SelectedEvent" class="alert alert-success" style="margin-top:50px">
-                <h2 style="margin-top:0px"> Selected Event:</h2>
+                <h2 style="margin-top:0px"> Visite sélectionnée :</h2>
                 <h3 style="color:#A9A50E">{{SelectedEvent.title}}</h3>
                 <p>{{SelectedEvent.description}}</p>
             </div>
         </div>
     </div>
-</div>
