steven : commit calendrier qui marche

--- a/src/main/webapp/views/pc/vListePCVue.html
+++ b/src/main/webapp/views/pc/vListePCVue.html
@@ -6,9 +6,10 @@
         </div>
         <div class="col-md-4">
             <div ng-show="SelectedEvent" class="alert alert-success" style="margin-top:50px">
-                <h2 style="margin-top:0px"> Visite sélectionnée :</h2>
+                <h2 style="margin-top:0px"> Visite selectionnee :</h2>
                 <h3 style="color:#A9A50E">{{SelectedEvent.title}}</h3>
                 <p>{{SelectedEvent.description}}</p>
+                <p>Aura lieu entre le {{SelectedEvent.start}} et le {{SelectedEvent.end}}</p>
             </div>
         </div>
     </div>
