--- a/src/main/webapp/views/pc/vListePCVue.html
+++ b/src/main/webapp/views/pc/vListePCVue.html
@@ -1,9 +1,10 @@
 <h2>Calendrier des visites</h2>
-<!--  HTML -->
     <div class="row">
+    <!-- Le calendrier en lui-même -->
         <div class="col-md-8">
             <div id="calendar" ui-calendar="uiConfig.calendar" ng-model="eventSources" calendar="myCalendar"></div>
         </div>
+        <!-- la plage d'information lors de la sélection d'une visite dans le calendrier -->
         <div class="col-md-4">
             <div ng-show="SelectedEvent" class="alert alert-success" style="margin-top:50px">
                 <h2 style="margin-top:0px"> Visite selectionnee :</h2>
