Noelia : ajout des vues bien à vendre

--- a/src/main/webapp/views/bl/bLAjoutVue.html
+++ b/src/main/webapp/views/bl/bLAjoutVue.html
@@ -57,7 +57,7 @@ Garniture
   </label>
 </div>
 <br/>
-Num&eacutero de rue <input type="number" placeholder="Numéro" ng-model="blForm.adresse.numRue">
+Num&eacutero de rue <input type="number" placeholder="Num&eacutero" ng-model="blForm.adresse.numRue">
 <br/>
 Rue <input type="text" placeholder="rue" ng-model="blForm.adresse.rue">
 <br/>
