--- a/src/main/webapp/views/bl/bLRechercheVue.html
+++ b/src/main/webapp/views/bl/bLRechercheVue.html
@@ -39,7 +39,7 @@ ID : <input type="number" placeholder="identifiant" ng-model="id" >
 		<td>{{bienlouer.charges}}</td>
 		<td>{{bienlouer.typeBail}}</td>
 		<td>{{bienlouer.garniture}}</td>
-		<td>{{bienlouer.adresse.numRue}}, {{p.adresse.rue}}</td>
+		<td>{{bienlouer.adresse.numRue}}, {{bienlouer.adresse.rue}}</td>
 		<td>{{bienlouer.adresse.cp}}</td> 
 		<td>{{bienlouer.adresse.localite}}</td>
 		<td>{{bienlouer.adresse.pays}}</td>
