--- a/src/main/webapp/views/bl/bLListeVue.html
+++ b/src/main/webapp/views/bl/bLListeVue.html
@@ -31,7 +31,7 @@
 		<td>{{b.charges}}</td>
 		<td>{{b.typeBail}}</td>
 		<td>{{b.garniture}}</td>
-		<td>{{b.adresse.numRue}}, {{p.adresse.rue}}</td>
+		<td>{{b.adresse.numRue}}, {{b.adresse.rue}}</td>
 		<td>{{b.adresse.cp}}</td> 
 		<td>{{b.adresse.localite}}</td>
 		<td>{{b.adresse.pays}}</td>
