--- a/src/main/webapp/views/pc/vListePCVue.html
+++ b/src/main/webapp/views/pc/vListePCVue.html
@@ -1,16 +1,10 @@
+
 <h2>Calendrier des visites</h2>
     <div class="row">
     <!-- Le calendrier en lui-même -->
         <div class="col-md-8">
-            <div id="calendar" ui-calendar="uiConfig.calendar" ng-model="eventSources" calendar="myCalendar"></div>
+            <div ui-calendar="uiConfig.calendar" class="span8 calendar" ng-model="eventSources"></div> 
         </div>
         <!-- la plage d'information lors de la sélection d'une visite dans le calendrier -->
-        <div class="col-md-4">
-            <div ng-show="SelectedEvent" class="alert alert-success" style="margin-top:50px">
-                <h2 style="margin-top:0px"> Visite selectionnee :</h2>
-                <h3 style="color:#A9A50E">{{SelectedEvent.title}}</h3>
-                <p>{{SelectedEvent.description}}</p>
-                <p>Aura lieu entre le {{SelectedEvent.start}} et le {{SelectedEvent.end}}</p>
-            </div>
-        </div>
+        
     </div>
