claire: detail vue classe standard

--- a/src/main/webapp/views/cs/cSAjoutVue.html
+++ b/src/main/webapp/views/cs/cSAjoutVue.html
@@ -12,13 +12,13 @@ Type de bien <select class="form-control" ng-model="csForm.typeBien">
 <br/>
 mode d'offre <div class="radio">
   <label>
-    <input type="radio" name="statut" value="a louer" ng-model="csForm.modeOffre">
+    <input type="radio" name="offre" value="a louer" ng-model="csForm.modeOffre">
     a louer
   </label>
 </div>
 <div class="radio">
   <label>
-    <input type="radio" name="statut" value="a vendre" ng-model="csForm.modeOffre">
+    <input type="radio" name="offre" value="a vendre" ng-model="csForm.modeOffre">
     a vendre
   </label>
 </div>
