--- a/src/main/webapp/views/cs/cSModifVue.html
+++ b/src/main/webapp/views/cs/cSModifVue.html
@@ -14,13 +14,13 @@ Type de bien <select class="form-control" ng-model="csModif.typeBien">
 <br/>
 mode d'offre <div class="radio">
   <label>
-    <input type="radio" name="statut" value="a louer" ng-model="csModif.modeOffre">
+    <input type="radio" name="offre" value="a louer" ng-model="csModif.modeOffre">
     a louer
   </label>
 </div>
 <div class="radio">
   <label>
-    <input type="radio" name="statut" value="a vendre" ng-model="csModif.modeOffre">
+    <input type="radio" name="offre" value="a vendre" ng-model="csModif.modeOffre">
     a vendre
   </label>
 </div>
