claire: correction classe standard

--- a/src/main/webapp/views/cs/cSAjoutVue.html
+++ b/src/main/webapp/views/cs/cSAjoutVue.html
@@ -13,13 +13,13 @@ Type de bien <select class="form-control" ng-model="csForm.typeBien">
 mode d'offre <div class="radio">
   <label>
     <input type="radio" name="offre" value="a louer" ng-model="csForm.modeOffre">
-    a louer
+    en location
   </label>
 </div>
 <div class="radio">
   <label>
     <input type="radio" name="offre" value="a vendre" ng-model="csForm.modeOffre">
-    a vendre
+   en vente
   </label>
 </div>
 <br/>
