--- a/src/main/webapp/views/cs/cSModifVue.html
+++ b/src/main/webapp/views/cs/cSModifVue.html
@@ -15,13 +15,13 @@ Type de bien <select class="form-control" ng-model="csModif.typeBien">
 mode d'offre <div class="radio">
   <label>
     <input type="radio" name="offre" value="a louer" ng-model="csModif.modeOffre">
-    a louer
+    en location
   </label>
 </div>
 <div class="radio">
   <label>
     <input type="radio" name="offre" value="a vendre" ng-model="csModif.modeOffre">
-    a vendre
+    en vente
   </label>
 </div>
 <br/>
