Noelia : liste image pour biens à louer

--- a/src/main/webapp/views/bl/bLAjoutVue.html
+++ b/src/main/webapp/views/bl/bLAjoutVue.html
@@ -33,7 +33,7 @@ Date de soumission <input type="date" placeholder="date" ng-model="blForm.dateSo
 <br/>
 Date de disposition <input type="date" placeholder="date" ng-model="blForm.dateDisposition">
 <br/>
-Photo descriptive <input type="file" placeholder="image" ng-model="blForm.listeImage" accept="image/*" base-sixty-four-input>
+Photo descriptive <input type="file" placeholder="image" ng-model="blForm.photos" accept="image/*" base-sixty-four-input multiple>
 <br/>
 Caution locative <input type="number" placeholder="caution" ng-model="blForm.caution">
 <br/>
