--- a/src/main/webapp/views/bl/bLModifVue.html
+++ b/src/main/webapp/views/bl/bLModifVue.html
@@ -42,7 +42,7 @@ Date de disposition
 <br />
 Photo descriptive
 <input type="file" placeholder="image" ng-model="blForm.listeImage"
-	accept="image/*" base-sixty-four-input>
+	accept="image/*" base-sixty-four-input multiple>
 <br />
 Caution locative
 <input type="number" placeholder="caution" ng-model="blForm.caution">
