--- a/src/main/webapp/views/bv/bVModifVue.html
+++ b/src/main/webapp/views/bv/bVModifVue.html
@@ -36,7 +36,7 @@ Date de soumission <input type="date" placeholder="date" ng-model="bvForm.dateSo
 <br/>
 Date de disposition <input type="date" placeholder="date" ng-model="bvForm.dateDisposition">
 <br/>
-Photo descriptive <input type="file" placeholder="image" ng-model="bvForm.listeImage" accept="image/*" base-sixty-four-input>
+Photo descriptive <input type="file" placeholder="image" ng-model="bvForm.photos" accept="image/*" base-sixty-four-input multiple>
 <br/>
 Prix d'achat demand&eacute <input type="number" placeholder="prix" ng-model="bvForm.prix">
 <br/>
