--- a/src/main/webapp/views/bl/bLModifVue.html
+++ b/src/main/webapp/views/bl/bLModifVue.html
@@ -41,8 +41,7 @@ Date de disposition
 <input type="date" placeholder="date" ng-model="blForm.dateDisposition">
 <br />
 Photo descriptive
-<input type="file" placeholder="image" ng-model="blForm.listeImage"
-	accept="image/*" base-sixty-four-input multiple>
+<input type="file" placeholder="image" ng-model="blForm.photos" accept="image/*" base-sixty-four-input multiple>
 <br />
 Caution locative
 <input type="number" placeholder="caution" ng-model="blForm.caution">
