--- a/src/main/webapp/views/client/clModifVue.html
+++ b/src/main/webapp/views/client/clModifVue.html
@@ -1,44 +1,99 @@
-<h2>Formulaire de modification d'un client</h2>
-<br />
-ID
-<input type="number" placeholder="ID" ng-model="clForm.id">
-<br />
-Nom
-<input type="text" placeholder="nom" ng-model="clForm.nom">
-<br />
-T&eacutel&eacutephone Personnel
-<input type="text" placeholder="tel personnel"
-	ng-model="clForm.telPerso">
-<br />
-Email
-<input type="text" placeholder="email" ng-model="clForm.mail">
-<br />
-Num&eacutero de rue
-<input type="number" placeholder="Numero"
-	ng-model="clForm.adresse.numRue">
-<br />
-Rue
-<input type="text" placeholder="rue" ng-model="clForm.adresse.rue">
-<br />
-Code Postal
-<input type="text" placeholder="code postal"
-	ng-model="clForm.adresse.cp">
-<br />
-Ville
-<input type="text" placeholder="ville"
-	ng-model="clForm.adresse.localite">
-<br />
-Pays
-<input type="text" placeholder="pays" ng-model="clForm.adresse.pays">
-<br />
-
-Acquereur
-<input type="text" placeholder="acquereur" ng-model="clForm.acquereur">
-<br />
-Num&eacutero de compostage
-<input type="number" placeholder="Numero"
-	ng-model="clForm.numCompostage">
-<br />
-<input type="button" value="Modifier" ng-click="modifier()">
-<br />
-<h3>{{msg}}</h3>
+<h2>Formulaire d'ajout d'un client</h2>
+<form class="form-horizontal">
+	<div class="form-group">
+		<label for="id" class="col-sm-2 control-label">ID</label>
+		<div class="col-sm-10">
+			<input type="number" class="form-control" id="id" placeholder="ID"
+				ng-model="clForm.id">
+		</div>
+	</div>
+	<div class="form-group">
+		<label for="nom" class="col-sm-2 control-label">Nom</label>
+		<div class="col-sm-10">
+			<input type="text" class="form-control" id="nom" placeholder="nom"
+				ng-model="clForm.nom">
+		</div>
+	</div>
+	<div class="form-group">
+		<label for="telPerso" class="col-sm-2 control-label">T&eacutel&eacutephone
+			Personnel</label>
+		<div class="col-sm-10">
+			<input type="text" class="form-control" id="telPerso"
+				placeholder="tel personnel" ng-model="clForm.telPerso">
+		</div>
+	</div>
+	<div class="form-group">
+		<label for="mail" class="col-sm-2 control-label">Email</label>
+		<div class="col-sm-10">
+			<input type="email" class="form-control" id="mail"
+				placeholder="email" ng-model="clForm.mail">
+		</div>
+	</div>
+	<div class="form-group">
+		<label for="no" class="col-sm-2 control-label">Num&eacutero de
+			rue</label>
+		<div class="col-sm-10">
+			<input type="number" class="form-control" id="no"
+				placeholder="Numero" ng-model="clForm.adresse.numRue">
+		</div>
+	</div>
+	<form class="form-horizontal">
+		<div class="form-group">
+			<label for="rue" class="col-sm-2 control-label">Rue</label>
+			<div class="col-sm-10">
+				<input type="text" class="form-control" id="rue" placeholder="rue"
+					ng-model="clForm.adresse.rue">
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="cp" class="col-sm-2 control-label">Code Postal</label>
+			<div class="col-sm-10">
+				<input type="text" class="form-control" id="cp"
+					placeholder="code postal" ng-model="clForm.adresse.cp">
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="ville" class="col-sm-2 control-label">Ville</label>
+			<div class="col-sm-10">
+				<input type="text" class="form-control" id="ville"
+					placeholder="ville" ng-model="clForm.adresse.localite">
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="pays" class="col-sm-2 control-label">Pays</label>
+			<div class="col-sm-10">
+				<input type="text" class="form-control" id="pays" placeholder="pays"
+					ng-model="clForm.adresse.pays">
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="acquereur" class="col-sm-2 control-label">Acqu&eacutereur</label>
+			<div class="col-sm-10">
+				<div class="radio">
+					<label> <input type="radio" name="acquereur" value="false"
+						ng-model="clForm.acquereur"> Non
+					</label>
+				</div>
+				<div class="radio">
+					<label> <input type="radio" name="acquereur" value="true"
+						ng-model="clForm.acquereur"> Oui
+					</label>
+				</div>
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="num" class="col-sm-2 control-label">Num&eacutero
+				de compostage</label>
+			<div class="col-sm-10">
+				<input type="text" class="form-control" id="num"
+					placeholder="reference Client" ng-model="clForm.numCompostage">
+			</div>
+		</div>
+		<div class="form-group">
+			<div class="col-sm-offset-2 col-sm-10">
+				<input type="button" class="btn btn-default" value="Modifier"
+					ng-click="modifier()">
+			</div>
+		</div>
+	</form>
+	<h3>{{msg}}</h3>
