--- a/src/main/webapp/views/client/clSupprVue.html
+++ b/src/main/webapp/views/client/clSupprVue.html
@@ -1,8 +1,18 @@
 <h2>Formulaire de suppression d'un client</h2>
-<br/>
+<form class="form-horizontal">
+	<div class="form-group">
+		<label for="id" class="col-sm-2 control-label">ID</label>
+		<div class="col-sm-10">
+			<input type="number" class="form-control" id="id" placeholder="ID"
+				ng-model="id">
+		</div>
+	</div>
 
-ID <input type="number" placeholder="ID" ng-model="id">
-<br/>
-<input type="button" value="Supprimer" ng-click="supprimer()" >
-<br/>
+	<div class="form-group">
+		<div class="col-sm-offset-2 col-sm-10">
+			<input type="button" class="btn btn-default" value="Supprimer"
+				ng-click="supprimer()">
+		</div>
+	</div>
+</form>
 <h3>{{msg}}</h3>
